fix syntax error in help

--- a/src/MGN/KDynDnsBundle/Resources/views/Help/help.html.twig
+++ b/src/MGN/KDynDnsBundle/Resources/views/Help/help.html.twig
@@ -22,7 +22,7 @@
 <p>Ensuite &eacute;diter le script avec votre editeur de texte favori et changez les lignes 2 et 3 pour renseignez les variables TOKEN et FQDN comme sur la photo ci-dessous.</p>
 
 <h5> Sous windows </h5>
-<p>Pour utilisez KDynDns sous linux vous pouvez simplement telecharger le fichier suivant sur votre ordinateur : <a href="{{ asset('scripts/KDynDns.vbs' }}">KDynDns.vbs</a>
+<p>Pour utilisez KDynDns sous linux vous pouvez simplement telecharger le fichier suivant sur votre ordinateur : <a href="{{ asset('scripts/KDynDns.vbs') }}">KDynDns.vbs</a>
 
 <p>Ensuite &eacute;diter le script avec notepad et changez les lignes 2 et 3 pour renseignez les variables TOKEN et FQDN comme sur la photo ci-dessous.</p>
 
